refactor : 확장성 고려하지 않기